# peak_flow_meter

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: requirements.txt  run.py
backend/app/: exstrapolate.py  main.py
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: root.py  user.py
backend/app/models/db/: __init__.py
backend/app/models/schema/: measurement.py  user.py
backend/dev/: init_db.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: api.js  index.js
frontend/src/components/: appRouter.jsx  main.jsx  main.scss
frontend/src/components/user/: index.jsx  logIn.css  logIn.css.map  logIn.jsx  logIn.scss  registration.css  registration.css.map  registration.jsx  registration.scss
frontend/src/consts/: status.js
frontend/src/redux/: index.js
frontend/src/redux/user/: actions.js  index.js  types.js
