[tool.poetry]
name = "peak_flow_meter_sqlite"
version = "0.1.0"
description = ""
authors = ["EvgenySkywalker <zhek26rus@google.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.2"
fastapi = "^0.61.2"
SQLAlchemy = "^1.3.20"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
scipy = "^1.5.4"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
